--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,15 @@
 *.jar
 *.war
 *.ear
+
+SearchEngine/build
+SearchEngine/nbproject
+SearchEngine/build.xml
+SearchEngine/manifest.mf
+
+war/WEB-INF/appengine-generated
+war/WEB-INF/class
+war/WEB-INF/lib
+
+run/
+
